type ClearedEvent = {}

export default ClearedEvent;
