type PutEvent = {
  key: string
  value: any
}

export default PutEvent;
