type RemovedEvent = {
  key: string
}

export default RemovedEvent;
